welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:5: error: not found: value isfacingTrail
if (isfacingTrail) {avance()} 
    ^SlugHunting:7: error: not found: value isfacingTrail
if (isfacingTrail()) { avance()} 
    ^SlugHunting:9: error: not found: value isFacingtrail
if (isFacingtrail()) {avance()}
    ^