welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def hunt() {
    while (!estSurBiscuit) {
baisseBrosse();leveBrosse();	
if (isfacingTrail) {avance()} 
else { gauche(); 
if (isfacingTrail()) { avance()} 
else { droite();droite();
if (isFacingtrail()) {avance()}
    }}
}}

def isFacingTrail():Boolean = {
var test = false;
if (estFaceMur) {}

else {avance(); if (getCouleurSol() == Color.green) { test = true}
recule()}
return test


  
}        

